employee registration reactive forms introduced

--- a/employeeregistration/src/app/employee/employee.component.html
+++ b/employeeregistration/src/app/employee/employee.component.html
@@ -21,7 +21,9 @@
 </div>
 <div class="row">
     <div class="col-md-12 col-sm-10 tablecss text-right">
-        <button class="other-button">Add Employee&nbsp;<i class="fa fa-plus-circle" aria-hidden="true"></i></button>
+        <button class="other-button " (click)="addEmployee()">Add Employee&nbsp;
+            <i class="fa fa-plus-circle" aria-hidden="true"></i>
+            </button>
     </div>
 <div class="col-md-12 col-sm-10 tablecss">
     <table class="table table-striped">
