--- a/employeeregistration/src/app/add-employee/add-employee.component.html
+++ b/employeeregistration/src/app/add-employee/add-employee.component.html
@@ -53,6 +53,14 @@
                 </div>
             </div>
 
+            <div class="form-group">
+                <select class="custom-select" (change)="deptChanged($event)" formControlName="department">
+                    <option value="" disabled>Choose your option</option>
+                <option *ngFor="let dept of departmentList" [ngValue]="dept">{{dept}}</option>
+                </select>
+                
+            </div>
+
 
 
         </div>
