--- a/employeeregistration/src/app/add-employee/add-employee.component.html
+++ b/employeeregistration/src/app/add-employee/add-employee.component.html
@@ -17,7 +17,7 @@
 <form [formGroup]=" employeeForm" (ngSubmit)="onSubmit()" class="form-horizontal">
     <div class="panel panel-primary">
         <div class="panel-heading"> 
-            <h3 class="panel-title">Create Employee</h3>
+            <h3 class="jumbotron bg-secondary text-white panel-title">Create Employee</h3>
         </div>
         <div class="panel-body">
             <div class="form-group">
@@ -46,18 +46,18 @@
             </div>
 
             <div class="form-grooup">
-                <label class="col-md-2 col-sm-2 control-label">Gender</label>
-                <div class="col-md-8 col-sm-8">
+                <label class="col-md-12 col-sm-12 control-label">Gender</label>
+                <div class="col-md-2 col-sm-2">
                     <label class="radio=inline">
                          <input id="gender" type="radio" value="MALE" formControlName="gender"> Male
                     </label>
                 </div>
-                <div class="col-md-8 col-sm-8">
+                <div class="col-md-2 col-sm-2">
                     <label class="radio=inline">
                          <input id="gender" type="radio" value="FEMALE" formControlName="gender"> Female
                     </label>
                 </div>
-                <div class="col-md-8 col-sm-8">
+                <div class="col-md-2 col-sm-2">
                     <label class="radio=inline">
                          <input id="gender" type="radio" value="UNKNOWN" formControlName="gender"> Unknown
                     </label>
