--- a/employeeregistration/src/app/employee/employee.component.html
+++ b/employeeregistration/src/app/employee/employee.component.html
@@ -25,7 +25,7 @@
             <i class="fa fa-plus-circle" aria-hidden="true"></i>
             </button>
     </div>
-<div class="col-md-12 col-sm-10 tablecss">
+<div class="col-md-12 col-sm-10 tablecss" *ngIf="employeeList.length>0; else noemplorees">
     <table class="table table-striped">
     <thead>
       <tr>
@@ -40,18 +40,20 @@
     </thead>
     <tbody>
      <tr *ngFor="let emp of employeeList; let i=index;">
-         
           <td>{{emp.firstName}}</td>
           <td>{{emp.lastName}}</td>
           <td>{{emp.gender}}</td>
           <!--<td>{{emp.dob}}</td>-->
           <td>{{emp.department}}</td>
-           <td class="pointer" title="Edit"><i class="fa fa-pencil edit-icon" aria-hidden="true">
+           <td class="pointer" (click)="editEmployee(emp.id)" title="Edit"><i class="fa fa-pencil edit-icon" aria-hidden="true">
             </i></td>
-            <td class="pointer" title="Delete"><i class="fa fa-trash delete-icon"
+            <td class="pointer" (click)="deleteEmployee(emp.id)" title="Delete"><i class="fa fa-trash delete-icon"
               aria-hidden="true"></i></td>
      </tr>
     </tbody>
   </table>
 </div>
+<ng-template #noemplorees>
+  <div class="col-md-12 col-sm-12 default-message text-center">Employee deta not available!!! </div>
+</ng-template>
 </div>
