--- a/employeeregistration/src/app/add-employee/add-employee.component.html
+++ b/employeeregistration/src/app/add-employee/add-employee.component.html
@@ -1,74 +1,72 @@
 <!-- -------------------- Bread Crumb starts here -------------- -->
 <div class="row">
-  <div class="col-md-4 col-sm-4 tablecss">
-    <ol class="breadcrumb">
-      <li><a> <i class="fa fa-user" aria-hidden="true"></i>&nbsp;Employee Maagement</a></li>
-      <li  class="active">&nbsp;/&nbsp;Add Employee</li>
-    </ol>
-  </div>
-  <div class=" col-md-8 col-sm-6 tablecss text-right">
-    <button class="btn back-button " (click)="gobackToViewScreen()">
+    <div class="col-md-4 col-sm-4 tablecss">
+        <ol class="breadcrumb">
+            <li><a> <i class="fa fa-user" aria-hidden="true"></i>&nbsp;Employee Maagement</a></li>
+            <li class="active">&nbsp;/&nbsp;Add Employee</li>
+        </ol>
+    </div>
+    <div class=" col-md-8 col-sm-6 tablecss text-right">
+        <button class="btn back-button " (click)="gobackToViewScreen()">
             <i class="fa fa-chevron-left" aria-hidden="true"></i> Back</button>
-  </div>
+    </div>
 </div>
 <div class="row">&nbsp;</div>
 <!-- -------------------- Bread Crumb ends here -------------- -->
 <div class="container">
-<form [formGroup]=" employeeForm" (ngSubmit)="onSubmit()" class="form-horizontal">
-    <div class="panel panel-primary">
-        <div class="panel-heading"> 
-            <h3 class="jumbotron bg-secondary text-white panel-title">Create Employee</h3>
-        </div>
-        <div class="panel-body">
-            <div class="form-group">
-                <!--<label class="col-md-2 col-sm-2 control-label" for="firstName">First Name</label>
-                <div class="col-md-8 col-sm-8">
-                    <input id="firstName" formControlName = "firstName" type="text" class="form-control">
-                </div>-->
-                <label>First Name</label>
-                    <input type="text" formControlName="firstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
+    <form [formGroup]=" employeeForm" (ngSubmit)="onSubmit()" class="form-horizontal">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h3 class="jumbotron bg-secondary text-white panel-title">Create Employee</h3>
+            </div>
+            <div class="panel-body">
+                <div class="form-group">
+                    <label>First Name</label>
+                    <input type="text" formControlName="firstName" class="form-control"
+                        [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
                     <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
                         <div *ngIf="f.firstName.errors.required">First Name is required</div>
                     </div>
-            </div>
+                </div>
 
-            <div class="form-group">
-                <!--<label class="col-md-2 col-sm-2 control-label" for="lastName">Last Name</label>
-                <div class="col-md-8 col-sm-8">
-                    <input id="lastName"  formControlName = "lastName" type="text" class="form-control">
-                </div>-->
-
-                <label>Last Name</label>
-                    <input type="text" formControlName="lastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+                <div class="form-group">
+                    <label>Last Name</label>
+                    <input type="text" formControlName="lastName" class="form-control"
+                        [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
                     <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
                         <div *ngIf="f.lastName.errors.required">Last Name is required</div>
                     </div>
-            </div>
-
-            <div class="form-grooup">
-                <label class="col-md-12 col-sm-12 control-label">Gender</label>
-                <div class="col-md-2 col-sm-2">
-                    <label class="radio=inline">
-                         <input id="gender" type="radio" value="MALE" formControlName="gender"> Male
-                    </label>
                 </div>
-                <div class="col-md-2 col-sm-2">
-                    <label class="radio=inline">
-                         <input id="gender" type="radio" value="FEMALE" formControlName="gender"> Female
-                    </label>
-                </div>
-                <div class="col-md-2 col-sm-2">
-                    <label class="radio=inline">
-                         <input id="gender" type="radio" value="UNKNOWN" formControlName="gender"> Unknown
-                    </label>
-                </div>
-            </div>
 
-           
+                <div class="form-grooup">
+                    <label class="col-md-12 col-sm-12 control-label">Gender</label>
+                    <div class="col-md-2 col-sm-2">
+                        <label class="radio=inline">
+                            <input id="gender" type="radio" value="MALE" formControlName="gender"> Male
+                        </label>
+                    </div>
+                    <div class="col-md-2 col-sm-2">
+                        <label class="radio=inline">
+                            <input id="gender" type="radio" value="FEMALE" formControlName="gender"> Female
+                        </label>
+                    </div>
+                    <div class="col-md-2 col-sm-2">
+                        <label class="radio=inline">
+                            <input id="gender" type="radio" value="UNKNOWN" formControlName="gender"> Unknown
+                        </label>
+                    </div>
+                </div>
 
-            <div class="form-group col-5">
+                <div class="form-group">
+                    <label for="dob">Date of Birth</label>
+                    <ejs-datepicker id='dob' [ngClass]="{ 'is-invalid': submitted && f.dob.errors }" formControlName="dob" [value]='dateValue' placeholder='Select a Date'></ejs-datepicker>
+                </div>
+
+
+                <div class="form-group col-5">
                     <label>Department</label>
-                    <select formControlName="department" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.department.errors }">
+                    <select formControlName="department" class="form-control"
+                        [ngClass]="{ 'is-invalid': submitted && f.department.errors }">
                         <option value="Micro Services">Micro Services</option>
                         <option value="Web Design">Web Design</option>
                         <option value="Mobile application Development">Mobile application Development</option>
@@ -78,10 +76,10 @@
                         <div *ngIf="f.department.errors.required">department is required</div>
                     </div>
                 </div>
+            </div>
+            <div class="panel-footer">
+                <button class="button save-button" type="submit">Save</button>
+            </div>
         </div>
-        <div class="panel-footer">
-            <button class="btn btn-primary" type="submit">Save</button>
-        </div>
-    </div>
-</form>
+    </form>
 </div>
